Copied ios into osx

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "ubuntu",
       "blackberry10",
       "ios",
+      "osx",
       "wp7",
       "wp8",
       "windows8",
@@ -32,6 +33,7 @@
     "cordova-ubuntu",
     "cordova-blackberry10",
     "cordova-ios",
+    "cordova-osx",
     "cordova-wp7",
     "cordova-wp8",
     "cordova-windows8",
