--- a/plugin.xml
+++ b/plugin.xml
@@ -109,6 +109,18 @@
         <framework src="AssetsLibrary.framework" />
     </platform>
 
+    <!-- osx -->
+    <platform name="osx">
+        <config-file target="config.xml" parent="/*">
+            <feature name="FileTransfer">
+                <param name="osx-package" value="CDVFileTransfer" />
+            </feature>
+        </config-file>
+        <header-file src="src/osx/CDVFileTransfer.h" />
+        <source-file src="src/osx/CDVFileTransfer.m" />
+
+    </platform>
+
     <!-- wp7 -->
     <platform name="wp7">
         <config-file target="config.xml" parent="/*">
